--- a/SimonProject/SimonProject.csproj
+++ b/SimonProject/SimonProject.csproj
@@ -113,6 +113,12 @@
   <ItemGroup>
     <None Include="Resources\Buzzer-SoundBible.com-188422102.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Iconshock-Brilliant-Graphics-Colors.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icon.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
